test(token): 대기열/활성화 토큰 Redis 통합 테스트